--- a/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
@@ -22,6 +22,8 @@
           </li>
 
           <a class="nav-link"  (click)="post()" routerLinkActive="active">Post Jobs</a>
+          
+          <a class="nav-link"  (click)="postappoint()" routerLinkActive="active">Appointments</a>
 
 
           <!-- Search Jobs -->
