--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.css
@@ -15,7 +15,7 @@
 }
 
 .card {
-  /* margin-top: 10px; */
+  margin-top: 18px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 2rem;
   /* margin-top: 50px;  */
