--- a/NewFirstevaluation/Frontend_Angular/src/app/components/not-scheduled/not-scheduled.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/not-scheduled/not-scheduled.component.html
@@ -1,57 +1,102 @@
 <div class="container mt-6 mb-4">
   <h2>Not Scheduled</h2>
+  <div class="mb-3">
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Search by Applicant ID"
+      [(ngModel)]="searchTerm"
+      (change)="filterAppointments()"
+    />
+  </div>
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
       <thead class="thead-dark">
         <tr>
           <th>Full Name</th>
           <th>Email</th>
-          <th>Phone</th>
-          <th>Passing Year</th>
-          <th>CGPA</th>
-          <th>Language</th>
-          <th>Key Skill</th>
-          <th>Area of Interest</th>
-          <th>Resume</th>
-          <th>Location</th>
-          <th>Time</th>
           <th>Action</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let student of students">
-          <td>{{ student.fullName }}</td>
-          <td>{{ student.email }}</td>
-          <td>{{ student.phone }}</td>
-          <td>{{ student.yearOfPassing }}</td>
-          <td>{{ student.cgpa }}</td>
-          <td>{{ student.language }}</td>
-          <td>{{ student.keySkill }}</td>
-          <td>{{ student.areaOfInterest }}</td>
+        <tr *ngFor="let student of appoints">
+          <td>{{ student.jobSeeker.fullName }}</td>
+          <td>{{ student.jobSeeker.email }}</td>
           <td>
-            <button class="btn btn-link" (click)="openResume(student)">View Resume</button>
-          </td>
-          <td>
-            <input type="text" [(ngModel)]="student.location" placeholder="Enter Location">
-          </td>
-          <td>
-            <input type="text" [(ngModel)]="student.time" placeholder="Enter Time">
-          </td>
-          <td>
-            <button class="btn btn-primary" (click)="appointStudent(student)">Appoint</button>
+            <button class="btn btn-primary" (click)="Appointmentbutton(student)">Appoint</button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
 
-  <!-- Resume Modal -->
-  <div *ngIf="selectedStudent" class="modal">
+<!-- Simple Modal -->
+<div class="modal" *ngIf="flag==true">
+  <div class="modal-dialog">
     <div class="modal-content">
-      <span class="close" (click)="closeResume()">&times;</span>
-      <h4>Resume of {{ selectedStudent.fullName }}</h4>
-      <div [innerHtml]="selectedStudent.resume | safeHtml"></div>
-      <button class="btn btn-secondary" (click)="closeResume()">Close</button>
+      <div class="modal-header">
+        <h5 class="modal-title">Graduate Details</h5>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+        <p class="col-3"><strong>Appointment ID:</strong> {{ selectedAppoint.applicantId }}</p>
+        <p class="col-3"><strong>Name :</strong> {{ selectedAppoint.jobSeeker.fullName }}</p>
+        <p class="col-3"><strong>Email :</strong> {{ selectedAppoint.jobSeeker.email }}</p>
+        </div>
+        <div class="row">
+        <p class="col-3"><strong>Phone:</strong> {{ selectedAppoint.jobSeeker.phone }}</p>
+        <p class="col-3"><strong>YearOfPassing:</strong> {{ selectedAppoint.jobSeeker.yearOfPassing}}</p>
+        <p class="col-3"><strong>Cgpa:</strong> {{ selectedAppoint.jobSeeker.cgpa }}</p>
+        </div>
+        <div class="row">
+        <p class="col-3"><strong>Language:</strong> {{ selectedAppoint.jobSeeker.language }}</p>
+        <p class="col-3"><strong>keySkill:</strong> {{ selectedAppoint.jobSeeker.keySkill }}</p>
+        <p class="col-3"><strong>AreaOfInterest:</strong> {{ selectedAppoint.jobSeeker.areaOfInterest }}</p>
+        </div>
+        <div class="row">
+        <p class="col-3"><strong>Project:</strong> {{ selectedAppoint.jobSeeker.project }}</p>
+        <p class="col-3"><strong>Applied For JobId:</strong> {{selectedAppoint.jobSeeker.job.jobId}}</p>
+        <p class="col-4"><strong>Applied For Job Name:</strong> {{selectedAppoint.jobSeeker.job.jobName}}</p>
+      </div>
+      <div class="row">
+        <div class="col-6">
+        <label for="location"><strong>Location:</strong></label>
+        <input type="text" id="location" class="form-control input-outline" [(ngModel)]="selectedAppoint.location" placeholder="Enter Location">
+        </div>
+        <div class="col-6">
+        <label for="Date"><strong>Date: </strong></label>
+        <input type="date" id="Date" class="form-control input-outline" [(ngModel)]="selectedAppoint.date" placeholder="Enter Time">
+      </div>
+      <div>
+        <button class="btn btn-link" (click)="openResume(selectedAppoint.applicantId)">View Resume</button>
+      </div>
+      </div>
+      </div>
+      <div class="modal-footer">
+      
+      <button type="button" class="btn btn-success" (click)="Appoint(selectedAppoint)">Appoint</button>
+      <button type="button" class="btn btn-dark" (click)="reject(selectedAppoint)">Reject</button>
+      <button type="button" class="btn btn-danger" (click)="closeModal()">Close</button>
+      </div>
+    </div>
+  </div>
+</div>  
+
+<!-- Delete Confirmation Modal -->
+<div class="modal" *ngIf="selectedforreject">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirm Delete</h5>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this item?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="closeModalforreject()">Cancel</button>
+        <button type="button" class="btn btn-danger" (click)="deleteappointbyId(selectedforreject.applicantId)" >Delete</button>
+      </div>
     </div>
   </div>
 </div>
+
