final backend and 100% working frontend checked except navbar

--- a/NewFirstevaluation/Frontend_Angular/src/app/components/scheduled/scheduled.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/scheduled/scheduled.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-6 mb-4">
 
 
-  <h2>Not Scheduled</h2>
+  <h2> Scheduled</h2>
   <div class="mb-3">
     <input
       type="text"
@@ -63,7 +63,7 @@
       </div>
       <div class="row">
         <p class="col-6"><strong>Date:</strong> {{ selectedAppoint.date }}</p>
-        <p class="col-6"><strong>Location:</strong> {{selectedAppoint.location</p>
+        <p class="col-6"><strong>Location:</strong> {{selectedAppoint.location}}</p>
       </div>
       <div>
         <button class="btn btn-link" (click)="openResume(selectedAppoint)">View Resume</button>
