--- a/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.html
@@ -132,28 +132,25 @@
       <div class="card-body">
         <h2 class="h2 fw-bold mb-0">Email Verification</h2>
         <form [formGroup]="emailForm" (ngSubmit)="onConfirmEmail()" class="w-100 mt-2">
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email">
-            <div *ngIf="isInvalid('email')" class="text-danger">
-              {{ getErrorMessage('email') }}
+          <div data-mdb-input-init class="form-outline mb-4">
+            <label for="email" class="col-sm-3 col-form-label">Email:</label>
+            <div class="col-sm-9" id="inputfield">
+                <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email" >
+                <div *ngIf="isInvalid('email')" class="text-danger">
+                    {{ getErrorMessage('email') }}
+                </div>
             </div>
           </div>
-          <div class="form-group">
-            <label for="otp">OTP:</label>
-            <div class="otp-input">
-              <input type="text" formControlName="otp1" placeholder="" class="form-control form-select-lg input-outline" maxlength="1">
-              <input type="text" formControlName="otp2" placeholder="" class="form-control form-select-lg input-outline" maxlength="1">
-              <input type="text" formControlName="otp3" placeholder="" class="form-control form-select-lg input-outline" maxlength="1">
-              <input type="text" formControlName="otp4" placeholder="" class="form-control form-select-lg input-outline" maxlength="1">
-              <input type="text" formControlName="otp5" placeholder="" class="form-control form-select-lg input-outline" maxlength="1">
-              <input type="text" formControlName="otp6" placeholder="" class="form-control form-select-lg input-outline" maxlength="1">
-            </div>
+          <div data-mdb-input-init class="form-outline mb-4">
+            <label for="email" class="col-sm-3 col-form-label">OTP:</label>
+            <div class="col-sm-9" id="inputfield" >
+            <input type="text" formControlName="otp" placeholder="6-digit OTP" class="form-control form-select-lg" maxlength="6">
             <div *ngIf="isInvalid('otp')" class="text-danger">
               {{ getErrorMessage('otp') }}
-            </div>
           </div>
-          <button type="submit" class="btn btn-primary mx-1 ">Verify OTP</button>
+        </div>
+          </div>
+          <button type="submit" class="btn btn-primary mx-1">Verify OTP</button>
           <button type="button" class="btn btn-secondary" (click)="onResendOtp()">Resend OTP</button>
         </form>
       </div>
