--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-login/admin-login.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-login/admin-login.component.css
@@ -41,3 +41,10 @@ background: #eee;
   color: #ffffff; /* Bright white color */
   font-weight: bold; /* Bold text */
 }
+
+.nav-item.active a, .nav-item a:hover , .input-group-append .btn:hover, .input-group-append .btn.active  {
+  background-color: white;
+  color: #113f5f;
+  border-radius: 5px;
+  margin : 5px;
+}
