--- a/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.css
@@ -72,3 +72,21 @@
   border: 2px solid #050e17; /* Change the color as needed */
   border-radius: 0.25rem;
 }
+
+.input-group {
+  border-radius: 15px;
+}
+
+
+.nav-item.active a, .nav-item a:hover , .input-group-append .btn:hover, .input-group-append .btn.active  {
+  background-color: white;
+  color: #113f5f;
+  border-radius: 5px;
+  margin : 5px;
+}
+
+
+.nav-link, .text-1{
+  color: rgb(250, 248, 248);
+  font-weight: bold;
+}
