--- a/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.html
@@ -1,8 +1,10 @@
 <div style="position: static;">
   <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
+    <!--  -->
     <div class="container-fluid">
       <!-- Centered brand -->
-      <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a>
+      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
+
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -16,17 +18,27 @@
           <!-- Home -->
           <!-- *ngIf="currentRoute !== '/home'" -->
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active">Home</a>
           </li>
 
+
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="post()">Post Jobs</a>
+          </li>
+
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="postappoint()">Appointments</a>
+          </li>
+
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="jobsforyou()">Explore Jobs</a>
+          </li>
 
 
 
           <!-- Search Jobs -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
-          <!-- <li class="nav-item" >
-            <a class="nav-link" routerLink="/gradhome" routerLinkActive="active">Jobs for you</a>
-          </li> -->
+
 
 
           <!-- Services -->
@@ -50,12 +62,24 @@
           </li>
 
 
+
+          <li class="nav-item" >
+            <a class="nav-link" *ngIf="!roleIdString.startsWith('EMP')"  routerLink="/login"  routerLinkActive="active">Login</a>
+          </li>
+
+          <li>
+            <a class="nav-link" *ngIf="!roleIdString.startsWith('EMP')"  routerLink="/register"  routerLinkActive="active">Register</a>
+          </li>
+
+          <li>
+            <a class="nav-link" *ngIf="!roleIdString.startsWith('EMP')" routerLink="/admin-login" routerLinkActive="active">Admin</a>
+          </li>
         </ul>
 
         <!-- Green dot for logged-in status -->
         <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
       </div>
-
+      <a class="nav-link" *ngIf="roleIdString.startsWith('EMP')" routerLink="/home" >Logout</a>
     </div>
   </nav>
 </div>
@@ -131,7 +155,32 @@
     <div class="card"  style="background-color: #f0f0f0;">
       <div class="card-body">
         <h2 class="h2 fw-bold mb-0">Email Verification</h2>
+
         <form [formGroup]="emailForm" (ngSubmit)="onConfirmEmail()" class="w-100 mt-2">
+          <div data-mdb-input-init class="form-outline mb-4">
+            <label for="email" class="col-sm-3 col-form-label">Email:</label>
+            <div class="col-sm-9" id="inputfield">
+                <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email" >
+                <div *ngIf="isInvalid('email')" class="text-danger">
+                    {{ getErrorMessage('email') }}
+                </div>
+            </div>
+          </div>
+          <div data-mdb-input-init class="form-outline mb-4">
+            <label for="email" class="col-sm-3 col-form-label">OTP:</label>
+            <div class="col-sm-9" id="inputfield" >
+            <input type="text" formControlName="otp" placeholder="6-digit OTP" class="form-control form-select-lg" maxlength="6">
+            <div *ngIf="isInvalid('otp')" class="text-danger">
+              {{ getErrorMessage('otp') }}
+          </div>
+        </div>
+          </div>
+          <button type="submit" class="btn btn-primary mx-1">Verify OTP</button>
+          <button type="button" class="btn btn-secondary" (click)="onResendOtp()">Resend OTP</button>
+        </form>
+
+
+        <!-- <form [formGroup]="emailForm" (ngSubmit)="onConfirmEmail()" class="w-100 mt-2">
           <div class="form-group">
             <label for="email">Email:</label>
             <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email">
@@ -155,7 +204,8 @@
           </div>
           <button type="submit" class="btn btn-primary mx-1 ">Verify OTP</button>
           <button type="button" class="btn btn-secondary" (click)="onResendOtp()">Resend OTP</button>
-        </form>
+        </form> -->
+
       </div>
     </div>
   </div>
