--- a/NewFirstevaluation/Frontend_Angular/src/app/components/scheduled/scheduled.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/scheduled/scheduled.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-6 mb-4">
 
 
-  <h2>Not Scheduled</h2>
+  <h2> Scheduled</h2>
   <div class="mb-3">
     <input
       type="text"
@@ -69,10 +69,10 @@
         <button class="btn btn-link" (click)="openResume(selectedAppoint)">View Resume</button>
       </div>
       </div>
-     
+
       <div class="modal-footer">
       <button type="button" class="btn btn-danger" (click)="closeModal()">Close</button>
       </div>
     </div>
   </div>
-</div>  
+</div>
