--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.css
@@ -113,3 +113,17 @@
   border-radius: 2rem;
   font-weight: 700;
 }
+
+
+
+.nav-item.active a, .nav-item a:hover , .input-group-append .btn:hover, .input-group-append .btn.active  {
+  background-color: white;
+  color: #113f5f;
+  border-radius: 5px;
+  margin : 5px;
+}
+
+.nav-link, .text-1{
+  color: rgb(250, 248, 248);
+  font-weight: bold;
+}
