--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.html
@@ -18,19 +18,22 @@
       <!-- Navigation items -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto"> <!-- Centering the list -->
-          <!-- Home -->
-          <!-- *ngIf="currentRoute !== '/home'" -->
+
           <li class="nav-item" >
             <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active">Home</a>
           </li>
 
-          <a class="nav-link"  (click)="post()" routerLinkActive="active">Post Jobs</a>
+
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="post()">Post Job</a>
+          </li>
+
 
 
           <!-- Search Jobs -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <li class="nav-item" >
-            <a class="nav-link" (click)=jobsforyou() routerLinkActive="active">Jobs for you</a>
+            <a class="nav-link"  routerLink="/home/{{roleIdString}}"  (click)=jobsforyou() routerLinkActive="active">Jobs for you</a>
           </li>
 
 
@@ -100,8 +103,8 @@
     </div>
 
     <!-- Main content -->
-   
+
       <router-outlet></router-outlet>
-   
- 
+
+
 </div>
