--- a/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.css
@@ -1,5 +1,5 @@
 .button-group .btn {
-    margin-right: 20px; 
+    margin-right: 20px;
 }
 
 .container {
@@ -9,8 +9,8 @@
     padding: 0;
     top: 0;
   }
-  
-  
+
+
   .background {
     position: absolute;
     top: 0;
@@ -22,8 +22,8 @@
     background-position: center;
     filter: blur(5px);
   }
-  
-  
+
+
   .content {
     position: absolute;
     top: 50%;
@@ -33,15 +33,15 @@
     color: white;
     z-index: 1;
   }
-  
-  
-  
-  
+
+
+
+
   .animated-text {
     opacity: 0;
     animation: fadeInUp 1s ease forwards;
   }
-  
+
   @keyframes fadeInUp {
     from {
       opacity: 0;
@@ -69,4 +69,12 @@
 .nav-link.active {
     color: #ffffff; /* Bright white color */
     font-weight: bold; /* Bold text */
+}
+
+
+.nav-item.active a, .nav-item a:hover   {
+  background-color: white;
+  color: #113f5f;
+  border-radius: 5px;
+  margin : 5px;
 }
