--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-search/job-search.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-search/job-search.component.html
@@ -2,8 +2,7 @@
     <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
       <div class="container-fluid">
         <!-- Centered brand -->
-        <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a>
-
+        <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
         <!-- Toggler button for small screens -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +39,7 @@
             <!-- About Us -->
             <!-- *ngIf="currentRoute !== '/login'" -->
             <li class="nav-item" >
-              <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active">About Us</a>
+              <a class="nav-link" routerLink="/about-us" routerLinkActive="active">About Us</a>
             </li>
 
             <li class="nav-item" >
