--- a/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.css
@@ -16,12 +16,12 @@ background: #eee;
 
 #drop{
     width: 100px;
-  
+
 }
 
 #roleId{
     width: 230px;
-   
+
 }
 
 
@@ -45,4 +45,16 @@ background: #eee;
 .nav-link.active {
   color: #ffffff; /* Bright white color */
   font-weight: bold; /* Bold text */
+}
+
+.nav-item.active a, .nav-item a:hover , .input-group-append .btn:hover, .input-group-append .btn.active  {
+  background-color: white;
+  color: #113f5f;
+  border-radius: 5px;
+  margin : 5px;
+}
+
+.nav-link, .text-1{
+  color: rgb(250, 248, 248);
+  font-weight: bold;
 }
