--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.html
@@ -1,3 +1,51 @@
+<div style="position: static;">
+  <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
+    <!--  -->
+    <div class="container-fluid">
+      <!-- Centered brand -->
+      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
+
+
+      <!-- Toggler button for small screens -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Navigation items -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto"> <!-- Centering the list -->
+          <!-- Home -->
+          <!-- *ngIf="currentRoute !== '/home'" -->
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+          </li>
+
+
+
+          <!-- Blog  -->
+          <!-- *ngIf="currentRoute !== '/job-search'" -->
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/blogs" routerLinkActive="active">Blogs</a>
+          </li>
+
+
+          <!-- About Us -->
+          <!-- *ngIf="currentRoute !== '/login'" -->
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active">About Us</a>
+          </li>
+
+
+        </ul>
+
+
+      </div>
+
+    </div>
+  </nav>
+</div>
+
 
 
 <div class="container-fluid">
@@ -10,11 +58,7 @@
           <span>MENU</span>
         </h6>
 
-
         <ul class="nav flex-column">
-
-
-
           <li class="nav-item" [class.active]="isActive('/admin-dash/graduates')">
             <a class="nav-link" routerLink="/admin-dash/graduates">Graduates</a>
           </li>
@@ -29,23 +73,18 @@
       </div>
     </div>
 
-    <!-- Main content -->
 
 <div class="col-md-9 ml-sm-auto col-lg-9 pt-3 px-4">
-  <!-- style=" background-image: url('https://wallpapers.com/images/hd/minimalist-aesthetic-actuary-work-laptop-wtvol12uoktgz31i.jpg'); background-size: cover; background-repeat: no-repeat; backdrop-filter: blur(5px); background-position: center;
-  background-attachment: fixed; width: 100%;
-  height: 100%" -->
-  <!-- Search bar -->
-  <div class="input-group mb-3 align-items-stretch">
-    <div class="input-group-append ml-auto align-items-stretch">
+
+  <div class="input-group mb-3 align-items-stretch" >
+    <div class="input-group-append ml-auto align-items-stretch" >
       <span class="input-group-text align-items-stretch"> Welcome Admin !
-        <!-- Admin logo -->
+
         <img src="https://icons.veryicon.com/png/o/internet--web/prejudice/user-128.png" alt="Admin Logo" class="admin-logo">
       </span>
     </div>
   </div>
 
-  <!-- Main content for each section will be displayed here -->
   <router-outlet></router-outlet>
 </div>
 </div>
