--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.html
@@ -1,3 +1,92 @@
+<div style="position: static;">
+  <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
+    <!--  -->
+    <div class="container-fluid">
+      <!-- Centered brand -->
+      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
+
+      <!-- <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a> -->
+      <a class="navbar-brand d-flex align-items-center mx-auto" routerLink="/home">
+        <!-- <img src="assets/images/ors-logo.png" alt="RecruitHub Logo" style="height: 30px; margin-right: 10px;">
+        <img src="./images/ors-logo.png" alt="RecruitHub Logo" style="height: 30px; margin-right: 10px;"> -->
+      </a>
+
+      <!-- Toggler button for small screens -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Navigation items -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto"> <!-- Centering the list -->
+          <!-- Home -->
+          <!-- *ngIf="currentRoute !== '/home'" -->
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active">Home</a>
+          </li>
+
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active"  (click)="post()">Post Jobs</a>
+
+          </li>
+
+
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active"  (click)="postappoint()" >Appointments</a>
+
+          </li>
+       
+
+
+
+          <!-- Services -->
+          <!-- *ngIf="currentRoute !== '/job-search'" -->
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
+          </li>
+
+
+          <!-- Blog  -->
+          <!-- *ngIf="currentRoute !== '/job-search'" -->
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/blogs" routerLinkActive="active">Blogs</a>
+          </li>
+
+
+          <!-- About Us -->
+          <!-- *ngIf="currentRoute !== '/login'" -->
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active">About Us</a>
+          </li>
+
+
+
+          <li class="nav-item" >
+            <a class="nav-link" *ngIf="!roleIdString.startsWith('EMP')"  routerLink="/login"  routerLinkActive="active">Login</a>
+          </li>
+
+          <li>
+            <a class="nav-link" *ngIf="!roleIdString.startsWith('EMP')"  routerLink="/register"  routerLinkActive="active">Register</a>
+          </li>
+
+          <li>
+            <a class="nav-link" *ngIf="!roleIdString.startsWith('EMP')" routerLink="/admin" routerLinkActive="active">Admin</a>
+          </li>
+        </ul>
+
+        <!-- Green dot for logged-in status -->
+        <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
+      </div>
+      <a class="nav-link" *ngIf="roleIdString.startsWith('EMP')" routerLink="/home" >Logout</a>
+    </div>
+  </nav>
+</div>
+
+
+
+
+
 
 
 <!--
@@ -84,7 +173,7 @@
 
 
 <section class="background vh-100">
-  <div class="container py-5">
+  <div class="container ">
     <div class="row justify-content-center">
       <div class="col-md-8 offset-md-2"> <!-- Adjusted column size and added offset -->
         <div class="card">
